[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/BrainObjectsCombo/BrainObjectsCombo.gd" id="1_script"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/Buttons/BasePanelContainerButton.gd" id="2_basebtn"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/architecture.png" id="3_icon_region"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/interconnected.png" id="4_icon_interconnect"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/input.png" id="7_icon_input"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/output.png" id="8_icon_output"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/memory-game.png" id="6_icon_memory"]
[ext_resource type="Texture2D" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_S.png" id="5_plus_s"]

[node name="BrainObjectsCombo" type="HBoxContainer"]
mouse_filter = 1
script = ExtResource("1_script")

[node name="BrainRegionsList" type="PanelContainer" parent="."]
script = ExtResource("2_basebtn")

[node name="HBoxContainer" type="HBoxContainer" parent="BrainRegionsList"]

[node name="TextureRect" type="TextureRect" parent="BrainRegionsList/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
texture = ExtResource("3_icon_region")
expand_mode = 1

[node name="Label" type="Label" parent="BrainRegionsList/HBoxContainer"]
theme_type_variation = &"Label_Header"
text = "Circuits"

[node name="TextureButton_BrainRegions" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
texture_normal = ExtResource("5_plus_s")
ignore_texture_size = true
stretch_mode = 0

[node name="InputsList" type="PanelContainer" parent="."]
script = ExtResource("2_basebtn")

[node name="HBoxContainer" type="HBoxContainer" parent="InputsList"]

[node name="TextureRect" type="TextureRect" parent="InputsList/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
texture = ExtResource("7_icon_input")
expand_mode = 1

[node name="Label" type="Label" parent="InputsList/HBoxContainer"]
theme_type_variation = &"Label_Header"
text = "Inputs"

[node name="TextureButton_Inputs" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
texture_normal = ExtResource("5_plus_s")
ignore_texture_size = true
stretch_mode = 0

[node name="InterconnectAreasList" type="PanelContainer" parent="."]
script = ExtResource("2_basebtn")

[node name="HBoxContainer" type="HBoxContainer" parent="InterconnectAreasList"]

[node name="TextureRect" type="TextureRect" parent="InterconnectAreasList/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
texture = ExtResource("4_icon_interconnect")
expand_mode = 1

[node name="Label" type="Label" parent="InterconnectAreasList/HBoxContainer"]
theme_type_variation = &"Label_Header"
text = "Interconnect Areas"

[node name="TextureButton_Interconnect" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
texture_normal = ExtResource("5_plus_s")
ignore_texture_size = true
stretch_mode = 0
mouse_filter = 2
focus_mode = 2
disabled = false


[node name="MemoryAreasList" type="PanelContainer" parent="."]
script = ExtResource("2_basebtn")

[node name="HBoxContainer" type="HBoxContainer" parent="MemoryAreasList"]

[node name="TextureRect" type="TextureRect" parent="MemoryAreasList/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
texture = ExtResource("6_icon_memory")
expand_mode = 1

[node name="Label" type="Label" parent="MemoryAreasList/HBoxContainer"]
theme_type_variation = &"Label_Header"
text = "Memory Areas"

[node name="TextureButton_Memory" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
texture_normal = ExtResource("5_plus_s")
ignore_texture_size = true
stretch_mode = 0
mouse_filter = 2
focus_mode = 2
disabled = false

[node name="OutputsList" type="PanelContainer" parent="."]
script = ExtResource("2_basebtn")

[node name="HBoxContainer" type="HBoxContainer" parent="OutputsList"]

[node name="TextureRect" type="TextureRect" parent="OutputsList/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
texture = ExtResource("8_icon_output")
expand_mode = 1

[node name="Label" type="Label" parent="OutputsList/HBoxContainer"]
theme_type_variation = &"Label_Header"
text = "Outputs"

[node name="TextureButton_Outputs" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
texture_normal = ExtResource("5_plus_s")
ignore_texture_size = true
stretch_mode = 0

